Add popup on the navbar "Book" button as well

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="rounded navbar-button">
-                    <a class="navbar-link" href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank">#=(book_now)</a>
+                    <a class="navbar-link" href="javascript:document.querySelector('#booknow button').click()">#=(book_now)</a>
                 </div>
 
                 <button id="navbar-toggler" class="rounded" type="button" aria-label="Menu" onclick="navbar.toggleMenu()">
@@ -112,7 +112,7 @@
                         <div class="text-center">
                             <button type="button" class="btn btn-primary my-3" data-bs-toggle="modal" data-bs-target="#modal-booknow">
                                 #=(book_now_hero)
-                            </button>                            
+                            </button>
                         </div>
                         <div>
                             #=(booknow_body1) #=(booknow_body2) <a href="tel:0476800625">04 76 80 06 25</a> #=(booknow_body3) <a href="mailto:contact@chalet-lepanoramique.fr">contact@chalet-lepanoramique.fr</a>.
@@ -968,7 +968,7 @@
                     <p>#=(book_now_popup_text_6)</p>
                 </div>
                 <div class="modal-footer justify-content-center">
-                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary my-3">#=(book_now_popup_button)</a>
+                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">#=(book_now_popup_button)</a>
                 </div>
             </div>
         </div>
