--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-02-19T12%3A04%3A13.378Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-02-19T14%3A04%3A22.201Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="rounded navbar-button">
-                    <a class="navbar-link" href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank">Réserver</a>
+                    <a class="navbar-link" href="javascript:document.querySelector('#booknow button').click()">Réserver</a>
                 </div>
 
                 <button id="navbar-toggler" class="rounded" type="button" aria-label="Menu" onclick="navbar.toggleMenu()">
@@ -112,7 +112,7 @@
                         <div class="text-center">
                             <button type="button" class="btn btn-primary my-3" data-bs-toggle="modal" data-bs-target="#modal-booknow">
                                 Réserver maintenant
-                            </button>                            
+                            </button>
                         </div>
                         <div>
                             Un peu perdus ? Contactez moi au:  <a href="tel:0476800625">04 76 80 06 25</a> ou par email:  <a href="mailto:contact@chalet-lepanoramique.fr">contact@chalet-lepanoramique.fr</a>.
@@ -995,7 +995,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Les portes de l'établissement sont fermées entre 12h et 16h, et après 22h.</p>
+                    <p>Les portes de l'établissement réouvrent à 16h et referment à 22h.</p>
                     <p>La station des 2 Alpes est à 12 minutes (10 km). Pas de transport à Mizoën, vous devez être véhiculé.</p>
                     <p>Merci de préciser en commentaire si vous souhaitez 2 lits simples, car par défaut les chambres sont préparées avec un lit double.</p>
                     <p>Merci de préciser en commentaire votre éventuel régime spécifique, le restaurant proposant un menu unique.</p>
@@ -1003,7 +1003,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                     <p>L'établissement n'est pas adapté à l'accueil de bébés et jeunes enfants.</p>
                 </div>
                 <div class="modal-footer justify-content-center">
-                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary my-3">Réserver</a>
+                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">Réserver</a>
                 </div>
             </div>
         </div>
@@ -1031,7 +1031,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-02-19T12%3A04%3A13.378Z"></script>
+    <script src="script/page.js?v=2024-02-19T14%3A04%3A22.201Z"></script>
 </body>
 
 </html>
