--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-02-19T12%3A04%3A13.378Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-02-19T14%3A04%3A22.201Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="rounded navbar-button">
-                    <a class="navbar-link" href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank">#=(book_now)</a>
+                    <a class="navbar-link" href="javascript:document.querySelector('#booknow button').click()">#=(book_now)</a>
                 </div>
 
                 <button id="navbar-toggler" class="rounded" type="button" aria-label="Menu" onclick="navbar.toggleMenu()">
@@ -112,7 +112,7 @@
                         <div class="text-center">
                             <button type="button" class="btn btn-primary my-3" data-bs-toggle="modal" data-bs-target="#modal-booknow">
                                 #=(book_now_hero)
-                            </button>                            
+                            </button>
                         </div>
                         <div>
                             #=(booknow_body1) #=(booknow_body2) <a href="tel:0476800625">04 76 80 06 25</a> #=(booknow_body3) <a href="mailto:contact@chalet-lepanoramique.fr">contact@chalet-lepanoramique.fr</a>.
@@ -968,7 +968,7 @@
                     <p>#=(book_now_popup_text_6)</p>
                 </div>
                 <div class="modal-footer justify-content-center">
-                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary my-3">#=(book_now_popup_button)</a>
+                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">#=(book_now_popup_button)</a>
                 </div>
             </div>
         </div>
@@ -996,7 +996,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-02-19T12%3A04%3A13.378Z"></script>
+    <script src="script/page.js?v=2024-02-19T14%3A04%3A22.201Z"></script>
 </body>
 
 </html>
