Update terms and conditions

--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-02-19T14%3A04%3A22.201Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-03-19T10%3A56%3A53.154Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -737,73 +737,64 @@
 
                     <h5>Article 2 / Formalités de réservation</h5>
                     <p>
-                        Après réception de votre réservation, je vous adresse par courriel une confirmation écrite.
-                        La réservation devient ferme dès règlement de l'acompte.
-                        Par le règlement de l'acompte, vous confirmez votre accord plein et entier avec les conditions générales spécifiées ci-après.
-                        Merci de bien vouloir noter que sans le versement de l'acompte, la réservation n'est pas confirmée et que, en conséquence, je me réserve le droit de récupérer les chambres.
-                        Les données de carte de crédit collectées seront conservées comme garantie de la réservation et ne seront utilisées qu'en cas d'annulation, de modification tardive, de non présentation ou vous avez choisi un tarif non annulable pré-payé.
-                        L'établissement se réserve le droit d'effectuer une pré-autorisation de la carte de crédit. La réservation peut être annulée si les données de carte de crédit fournies ne sont pas valides.
-                        Possibilité de règlement en e-chèques-vacances.
+                        Après réception de votre réservation, une confirmation par mail vous sera envoyée. La réservation devient ferme dès règlement de l'acompte. Par le règlement de l'acompte, vous confirmez votre accord plein et entier avec les conditions générales spécifiées ci-après. Merci de bien vouloir noter que sans le versement de l'acompte, la réservation n'est pas confirmée et que, en conséquence, votre chambre sera remise en vente. Les données de carte de crédit collectées seront conservées comme garantie de la réservation et ne seront utilisées qu'en cas d'annulation, de modification tardive ou de non présentation. L'établissement se réserve le droit d'effectuer une pré-autorisation de la carte de crédit. La réservation peut être annulée si les données de carte de crédit fournies ne sont pas valides.
                     </p>
 
                     <h5>Article 3 / Annulation du séjour par le client</h5>
                     <p>
-                        Toute modification n'est possible qu'après l'accord du Chalet Le Panoramique et peut entraîner des frais supplémentaires.
-                        Je vous informe qu'en cas d'annulation de la réservation avant le début du séjour, il sera dû, à titre de clause pénale par le client, une indemnité fixée de la façon suivante :
+                        Toute modification n'est possible qu'après l'accord du Chalet Le Panoramique et peut entraîner des frais supplémentaires. En cas d'annulation de la réservation avant le début du séjour, il sera dû, à titre de clause pénale par le client, une indemnité compensatrice de résiliation de contrat de réservation dont le montant dépend de votre choix de conditions d'annulation lors de votre réservation :
                     <ul>
-                        <li>si l'annulation intervient plus de 30 jours avant la date d'arrivée, l'acompte sera remboursé dans sa totalité;</li>
-                        <li>si l'annulation intervient entre 30 jours et 7 jours avant la date d'arrivée, l'acompte sera conservé dans sa totalité;</li>
-                        <li>si l'annulation intervient moins de 7 jours avant la date d'arrivée, la totalité du paiement restera acquise au Chalet Le Panoramique.</li>
+                        <li>Tarif Non Annulable Non Remboursable :
+                            <ul>
+                                <li>le règlement total de la prestation reste acquise au Chalet Le Panoramique</li>
+                            </ul>
+                        </li>
+                        <li>Tarif SemiFlexible / Flexible / ExtraFlexible :
+                            <ul>
+                                <li>si l'annulation intervient respectivement 21/7/3 jours avant la date d'arrivée, l'acompte sera remboursé dans sa totalité avec déduction des frais bancaires de traitement;</li>
+                                <li>si l'annulation intervient respectivement moins de 21/7/3 jours avant la date d'arrivée, la totalité du paiement restera acquise au Chalet Le Panoramique.</li>
+                            </ul>
+                        </li>
                     </ul>
-                    En cas de départ anticipé en cours de séjour : règlement total de la prestation réservée.
-                    En cas de choix du tarif Non Annulable Non Remboursable, le règlement total de la prestation reste acquise au Chalet Le Panoramique.
                     </p>
-
-                    <h5>Article 4 / Assurance annulation</h5>
                     <p>
-                        J'attire votre attention sur le fait qu'une assurance annulation peut-être incluse dans mes tarifs.
-                        Il est par conséquent vivement recommandé de la souscrire.
+                        En cas de départ anticipé en cours de séjour : règlement total de la prestation réservée.
                     </p>
 
-                    <h5>Article 5 / Annulation du séjour par le propriétaire</h5>
+                    <h5>Article 4 / Annulation du séjour par l'établissement</h5>
                     <p>
-                        Si, avant le début du séjour, le gérant est amené à annuler la réservation, il doit aussitôt en informer son client.
-                        Le client sera alors immédiatement et intégralement remboursé des sommes qu'il aura déjà versées.
+                        Si, avant le début du séjour, le gérant est amené à annuler la réservation, il doit aussitôt en informer son client. Le client sera alors immédiatement et intégralement remboursé des sommes qu'il aura déjà versées.
                     </p>
 
-                    <h5>Article 6 / Heure d'arrivée</h5>
+                    <h5>Article 5 / Heure d'arrivée</h5>
                     <p>
-                        Le client doit se présenter le jour précisé lors de sa réservation, au plus tôt à 17 h 00 (heure de disponibilité des chambres et de remise des clefs) et, au plus tard, à 22h.
-                        Le client préviendra impérativement par téléphone si, par la force des choses, il est contraint d'arriver après ce créneau horaire.
+                        Le client doit se présenter le jour précisé lors de sa réservation, au plus tôt à 16 h 00 (heure de disponibilité des chambres et de remise des clefs) et, au plus tard, à 22h. Le client préviendra impérativement par téléphone si, par la force des choses, il est contraint d'arriver après ce créneau horaire.
                     </p>
 
-                    <h5>Article 7 / Heure de départ</h5>
+                    <h5>Article 6 / Heure de départ</h5>
                     <p>
-                        L'heure de départ des chambres est fixée à 10 heures au plus tard.
+                        L'heure de départ des chambres est fixée à 10h30 au plus tard.
                     </p>
 
-                    <h5>Article 8 / Règlement du solde de l'hébergement</h5>
+                    <h5>Article 7 / Règlement du solde de l'hébergement</h5>
                     <p>
                         Le solde du séjour est à régler le jour du départ, à l'initiative du client.
                     </p>
 
-                    <h5>Article 9 / Animaux de compagnie</h5>
+                    <h5>Article 8 / Animaux de compagnie</h5>
                     <p>
                         Les animaux de compagnie ne sont pas autorisés.
                     </p>
 
-                    <h5>Article 10 / Art de vivre et utilisation des lieux</h5>
+                    <h5>Article 9 / Art de vivre et utilisation des lieux</h5>
                     <p>
-                        Afin de garantir la quiétude des lieux et le confort des hôtes et des résidents, le respect d'un certain « art de vivre » est exigé de tous.
-                        Il est notamment demandé de ne pas fumer à l'intérieur des chambres et des espaces communs.
-                        Le client s'engage plus généralement à respecter les consignes de savoir-vivre qui lui seront indiquées, celles qui s'imposent à tous dès lors qu'on vit en communauté et les présentes conditions générales de vente.
+                        Afin de garantir la quiétude des lieux et le confort des hôtes et des résidents, le respect d'un certain « art de vivre » est exigé de tous. Il est notamment demandé de ne pas fumer à l'intérieur des chambres et des espaces communs. Le client s'engage plus généralement à respecter les consignes de savoir-vivre qui lui seront indiquées, celles qui s'imposent à tous dès lors qu'on vit en communauté et les présentes conditions générales de vente.
                     </p>
                     <p>
                         Le client s'engage à rendre les chambres en parfait état à la fin du séjour et à déclarer systématiquement - et à assumer financièrement - toute dégradation dont il serait responsable.
                     </p>
                     <p>
-                        L'attention des hôtes est attirée sur le fait que les mineurs évoluant sur la propriété sont placés sous l'unique et entière responsabilité de leurs parents ou des personnes ayant autorité sur eux.
-                        L'accès au bar est interdit aux mineurs non accompagnés.
+                        L'attention des hôtes est attirée sur le fait que les mineurs évoluant sur la propriété sont placés sous l'unique et entière responsabilité de leurs parents ou des personnes ayant autorité sur eux. L'accès au bar est interdit aux mineurs non accompagnés.
                     </p>
                     <p>
                         Le Chalet le Panoramique n'acceptera aucune responsabilité en cas de perte, de vol et/ou de dommages ou de blessures causés aux biens et/ou aux personnes se trouvant sur la propriété, et ce quelle qu'en soit la cause.
@@ -815,16 +806,14 @@
                         Les clients doivent éviter de faire du bruit entre 22h00 et 8h00.
                     </p>
 
-                    <h5>Article 11 / Modification des conditions de vente</h5>
+                    <h5>Article 10 / Modification des conditions de vente</h5>
                     <p>
-                        Les présentes conditions de vente sont modifiables à tout moment et sans préavis.
-                        L'acceptation et le respect de ces conditions de vente sont réputés acquis aussitôt l'acompte versé.
+                        Les présentes conditions de vente sont modifiables à tout moment et sans préavis. L'acceptation et le respect de ces conditions de vente sont réputés acquis aussitôt l'acompte versé.
                     </p>
 
-                    <h5>Article 12 / Loi informatique et liberté</h5>
+                    <h5>Article 11 / Loi informatique et liberté</h5>
                     <p>
-                        Conformément à la loi n° 78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés, vous bénéficiez d'un droit d'accès et de rectification aux données vous concernant.
-                        Nous nous engageons à ne transmettre en aucun cas les informations que vous nous avez communiquées à d'autres sociétés ou organismes.
+                        Conformément à la loi n° 78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés, vous bénéficiez d'un droit d'accès et de rectification aux données vous concernant. Nous nous engageons à ne transmettre en aucun cas les informations que vous nous avez communiquées à d'autres sociétés ou organismes.
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -996,7 +985,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-02-19T14%3A04%3A22.201Z"></script>
+    <script src="script/page.js?v=2024-03-19T10%3A56%3A53.154Z"></script>
 </body>
 
 </html>
