Update terms and conditions

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -758,7 +758,7 @@
                     </ul>
                     </p>
                     <p>
-                        En cas de départ anticipé en cours de séjour : règlement total de la prestation réservée.
+                        En cas de départ anticipé en cours de séjour ou de non-présentation: règlement total de la prestation réservée.
                     </p>
 
                     <h5>Article 4 / Annulation du séjour par l'établissement</h5>
