--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-03-19T10%3A56%3A53.154Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-03-19T11%3A16%3A09.532Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -793,7 +793,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                     </ul>
                     </p>
                     <p>
-                        En cas de départ anticipé en cours de séjour : règlement total de la prestation réservée.
+                        En cas de départ anticipé en cours de séjour ou de non-présentation: règlement total de la prestation réservée.
                     </p>
 
                     <h5>Article 4 / Annulation du séjour par l'établissement</h5>
@@ -1020,7 +1020,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-03-19T10%3A56%3A53.154Z"></script>
+    <script src="script/page.js?v=2024-03-19T11%3A16%3A09.532Z"></script>
 </body>
 
 </html>
