Explicit distance from Alpe d'Huez

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-03-19T11%3A16%3A09.532Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-03-20T11%3A13%3A31.021Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -484,7 +484,7 @@ Vous préférez peut-être les espaces bien être et la remise en forme, les pro
                                 <p>
                                 <ul style="text-align:left">
                                     <li>les 2 Alpes à 10 km (200 km de pistes, 2500 m de dénivelé grâce au glacier, un enneigement permanent) ;</li>
-                                    <li>l'Alpe d'Huez à 15 km (220 km de pistes, 2200 m de dénivelé avec la descente de 16 km du Pic Blanc par Sarenne) ;</li>
+                                    <li>l'Alpe d'Huez à 15 km via sa connexion à Auris-en-Oisans (220 km de pistes, 2200 m de dénivelé avec la descente de 16 km du Pic Blanc par Sarenne) ;</li>
                                     <li>la Grave-La Meije à 15 km avec son sommet à 3983 m d'altitude ;</li>
                                     <li>le domaine de Serre Chevalier à environ 40 minutes de route.</li>
                                 </ul>
@@ -1020,7 +1020,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-03-19T11%3A16%3A09.532Z"></script>
+    <script src="script/page.js?v=2024-03-20T11%3A13%3A31.021Z"></script>
 </body>
 
 </html>
