--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-03-19T11%3A16%3A09.532Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-03-20T11%3A13%3A31.021Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -483,7 +483,7 @@ You may prefer well-being and fitness areas, snowshoe walks, ice skating, tobogg
                                 <p>
                                 <ul style="text-align:left">
                                     <li>Les 2 Alpes at 10 km (200 km of slopes, 2500 m drop thanks to the glacier, permanent snow cover);</li>
-                                    <li>Alpe d'Huez at 15 km (220 km of slopes, 2200 m drop with the 16 km descent of the Pic Blanc by Sarenne);</li>
+                                    <li>Alpe d'Huez at 15 km via Auris-en-Oisans (220 km of slopes, 2200 m drop with the 16 km descent of the Pic Blanc by Sarenne);</li>
                                     <li>la Grave-La Meije at 15 km with its summit at 3983 m above sea level;</li>
                                     <li>the domain of Serre Chevalier about 40 minutes drive.</li>
                                 </ul>
@@ -1018,7 +1018,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-03-19T11%3A16%3A09.532Z"></script>
+    <script src="script/page.js?v=2024-03-20T11%3A13%3A31.021Z"></script>
 </body>
 
 </html>
