--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-03-20T11%3A13%3A31.021Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-04-12T06%3A24%3A59.416Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -72,7 +72,7 @@
     </header>
 
     <main>
-        <section id="site-hero" class="d-flex justify-content-between flex-column hero-background winter" style="background-position: center 0px;user-select: none;">
+        <section id="site-hero" class="d-flex justify-content-between flex-column hero-background" style="background-position: center 0px;user-select: none;">
             <div id="hero-text" class="container text-white d-flex flex-column">
                 <div id="hero-text-upper" class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
                     <span>Welcome to the chalet hotel</span>
@@ -1018,7 +1018,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-03-20T11%3A13%3A31.021Z"></script>
+    <script src="script/page.js?v=2024-04-12T06%3A24%3A59.416Z"></script>
 </body>
 
 </html>
