--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-04-12T06%3A24%3A59.416Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-04-12T15%3A34%3A40.820Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -73,6 +73,16 @@
 
     <main>
         <section id="site-hero" class="d-flex justify-content-between flex-column hero-background" style="background-position: center 0px;user-select: none;">
+            <script>
+                {
+                    const date = new Date();
+                    const month = date.getMonth();
+                    if (month < 3 || month >= 10) {
+                        const section = document.getElementById("site-hero");
+                        section.classList.add("winter");
+                    }
+                }
+            </script>
             <div id="hero-text" class="container text-white d-flex flex-column">
                 <div id="hero-text-upper" class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
                     <span>#=(hero_upper)</span>
@@ -985,7 +995,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-04-12T06%3A24%3A59.416Z"></script>
+    <script src="script/page.js?v=2024-04-12T15%3A34%3A40.820Z"></script>
 </body>
 
 </html>
