Change "Book" popup text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -965,6 +965,7 @@
                     <p>#=(book_now_popup_text_4)</p>
                     <p>#=(book_now_popup_text_5)</p>
                     <p>#=(book_now_popup_text_6)</p>
+                    <p>#=(book_now_popup_text_7)</p>
                 </div>
                 <div class="modal-footer justify-content-center">
                     <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">#=(book_now_popup_button)</a>
