--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-04-12T15%3A34%3A40.820Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-04-19T16%3A20%3A56.402Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -994,12 +994,13 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Les portes de l'établissement réouvrent à 16h et referment à 22h.</p>
-                    <p>La station des 2 Alpes est à 12 minutes (10 km). Pas de transport à Mizoën, vous devez être véhiculé.</p>
-                    <p>Merci de préciser en commentaire si vous souhaitez 2 lits simples, car par défaut les chambres sont préparées avec un lit double.</p>
-                    <p>Merci de préciser en commentaire votre éventuel régime spécifique, le restaurant proposant un menu unique.</p>
-                    <p>Nous ne pouvons accueillir vos animaux de companie.</p>
+                    <p>L'établissement réouvre à 16h et ferme à 22h. Je vous invite à organiser votre arrivée dans ce créneau, avant 19h30 si vous souhaitez diner.</p>
+                    <p>Les chambres Panoramique sont configurées en lit double, merci de préciser en commentaire si vous souhaitez 2 lits simples.</p>
+                    <p>Les chambres Standard sont configurées « à la scandinave », chacun son lit 🙂.</p>
+                    <p>Je vous invite à mentionner également en commentaire votre régime spécifique, le restaurant proposant un menu unique.</p>
+                    <p>J'ai le regret de ne pouvoir accueillir vos animaux de compagnie.</p>
                     <p>L'établissement n'est pas adapté à l'accueil de bébés et jeunes enfants.</p>
+                    <p>La station des 2 Alpes est à 12 minutes (10 km). Pas de transport en commun à Mizoën, vous devez être véhiculé. Le Chalet dispose d'un parking gratuit.</p>
                 </div>
                 <div class="modal-footer justify-content-center">
                     <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">Réserver</a>
@@ -1030,7 +1031,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-04-12T15%3A34%3A40.820Z"></script>
+    <script src="script/page.js?v=2024-04-19T16%3A20%3A56.402Z"></script>
 </body>
 
 </html>
