--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-04-12T15%3A34%3A40.820Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-04-19T16%3A20%3A56.402Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -992,12 +992,13 @@ Just like cultural activities, guided tours or artistic workshops.
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Doors are closed from noon to 4 p.m. and after 10 p.m.</p>
-                    <p>The 2 Alpes resort is 12 minutes away (10 km). No transports in Mizoën, you must be have a car.</p>
-                    <p>Please specify in comments if you would like 2 single beds, because by default the rooms are prepared with a double bed.</p>
-                    <p>Please specify in the comments your possible specific diet, because the restaurant offers a unique menu every evening.</p>
-                    <p>We cannot accept pets.</p>
-                    <p>The hotel is not adapted for babies and young children.</p>
+                    <p>The establishment reopens at 4 p.m. and closes at 10 p.m. I invite you to organize your arrival during this time, before 7:30 p.m. if you wish to have dinner.</p>
+                    <p>The Panoramique rooms are configured as a double bed, please specify in comments if you would like 2 single beds.</p>
+                    <p>The Standard rooms are configured “Scandinavian style”, everyone has their own bed 🙂.</p>
+                    <p>I invite you to also mention your specific diet in the comments, as the restaurant offers a unique menu.</p>
+                    <p>I regret that I cannot accommodate your pets.</p>
+                    <p>The establishment is not suitable for welcoming babies and young children.</p>
+                    <p>The 2 Alpes resort is 12 minutes away (10 km). No public transport in Mizoën, you must have your car. The Chalet has free parking.</p>
                 </div>
                 <div class="modal-footer justify-content-center">
                     <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">Book</a>
@@ -1028,7 +1029,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-04-12T15%3A34%3A40.820Z"></script>
+    <script src="script/page.js?v=2024-04-19T16%3A20%3A56.402Z"></script>
 </body>
 
 </html>
