--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-04-12T15%3A34%3A40.820Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-04-19T16%3A20%3A56.402Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -965,6 +965,7 @@
                     <p>#=(book_now_popup_text_4)</p>
                     <p>#=(book_now_popup_text_5)</p>
                     <p>#=(book_now_popup_text_6)</p>
+                    <p>#=(book_now_popup_text_7)</p>
                 </div>
                 <div class="modal-footer justify-content-center">
                     <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary btn-lg">#=(book_now_popup_button)</a>
@@ -995,7 +996,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-04-12T15%3A34%3A40.820Z"></script>
+    <script src="script/page.js?v=2024-04-19T16%3A20%3A56.402Z"></script>
 </body>
 
 </html>
